--- a/index.html
+++ b/index.html
@@ -2,35 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://docs.google.com/forms/d/e/1FAIpQLSfRCWtfiFdZbBWr8liMSpeBUJ-X3zU65Ihp3UImCsd7ymmnJQ/viewform?usp=sf_link">
+    <meta http-equiv="refresh" content="0;url=https://your-first-google-form-link.com">
     <script>
-        // JavaScript code to determine the redirect URL based on the number of times the page has been visited
+        // JavaScript code to determine the redirect URL based on the user's assigned link
         const googleFormsLinks = [
             'https://docs.google.com/forms/d/e/1FAIpQLSec8FtHsDbEh9TIB5Kq4zFDAK-9rKuCC8CFMHvN_hF5JUda-g/viewform?usp=sf_link',
             'https://docs.google.com/forms/d/e/1FAIpQLSfdVbv9PgCTqA67cXmoEo3I0xxyoEj7zvidZR5DP_tqimkxzw/viewform?usp=sf_link',
             'https://docs.google.com/forms/d/e/1FAIpQLSeZoo1e6lQCLnkjFmhXtpXKImEp_bsgp8vHrqAkbzDgwUKOig/viewform?usp=sf_link'
         ];
 
-        // Function to get the current visit count from localStorage
-        function getVisitCount() {
-            const visitCount = localStorage.getItem('visitCount');
-            return visitCount ? parseInt(visitCount) : 0;
+        // Function to get or initialize the user's assigned link
+        function getUserAssignedLink() {
+            let assignedLink = localStorage.getItem('assignedLink');
+            if (!assignedLink) {
+                assignedLink = 0; // Start with the first link
+                localStorage.setItem('assignedLink', assignedLink);
+            }
+            return assignedLink;
         }
 
-        // Function to set the next visit count
-        function setNextVisitCount(currentCount) {
-            const nextCount = (currentCount + 1) % googleFormsLinks.length;
-            localStorage.setItem('visitCount', nextCount.toString());
-            return nextCount;
-        }
-
-        // Determine the next Google Forms link to redirect to
-        const currentVisitCount = getVisitCount();
-        const nextVisitCount = setNextVisitCount(currentVisitCount);
-        window.location.href = googleFormsLinks[nextVisitCount];
+        // Determine the user's assigned Google Forms link
+        const assignedLinkIndex = getUserAssignedLink();
+        const nextLinkIndex = (assignedLinkIndex + 1) % googleFormsLinks.length;
+        localStorage.setItem('assignedLink', nextLinkIndex);
+        window.location.href = googleFormsLinks[assignedLinkIndex];
     </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://docs.google.com/forms/d/e/1FAIpQLSfRCWtfiFdZbBWr8liMSpeBUJ-X3zU65Ihp3UImCsd7ymmnJQ/viewform?usp=sf_link">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://your-first-google-form-link.com">click here</a>.</p>
 </body>
 </html>
