--- a/index.html
+++ b/index.html
@@ -4,31 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=https://your-first-google-form-link.com">
     <script>
-        // JavaScript code to determine the redirect URL based on the user's assigned link
+        // JavaScript code to generate a random number (0, 1, or 2) and redirect to one of the three Google Forms links
+        const randomIndex = Math.floor(Math.random() * 3);
         const googleFormsLinks = [
             'https://docs.google.com/forms/d/e/1FAIpQLSec8FtHsDbEh9TIB5Kq4zFDAK-9rKuCC8CFMHvN_hF5JUda-g/viewform?usp=sf_link',
             'https://docs.google.com/forms/d/e/1FAIpQLSfdVbv9PgCTqA67cXmoEo3I0xxyoEj7zvidZR5DP_tqimkxzw/viewform?usp=sf_link',
             'https://docs.google.com/forms/d/e/1FAIpQLSeZoo1e6lQCLnkjFmhXtpXKImEp_bsgp8vHrqAkbzDgwUKOig/viewform?usp=sf_link'
         ];
-
-        // Function to get or initialize the user's assigned link
-        function getUserAssignedLink() {
-            let assignedLink = localStorage.getItem('assignedLink');
-            if (!assignedLink) {
-                assignedLink = 0; // Start with the first link
-                localStorage.setItem('assignedLink', assignedLink);
-            }
-            return assignedLink;
-        }
-
-        // Determine the user's assigned Google Forms link
-        const assignedLinkIndex = getUserAssignedLink();
-        const nextLinkIndex = (assignedLinkIndex + 1) % googleFormsLinks.length;
-        localStorage.setItem('assignedLink', nextLinkIndex);
-        window.location.href = googleFormsLinks[assignedLinkIndex];
+        window.location.href = googleFormsLinks[randomIndex];
     </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://your-first-google-form-link.com">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://Helplive6613.github.io/Experiment23.html">click here</a>.</p>
 </body>
 </html>
